重构服务身份为内部 UID
